# fallSenseX

./:  FallsenseX_Architecture.md  .gitignore  AGENTS.md  CMakeLists.txt  COORDINATE_SYSTEM_UPDATE.md  README.md  STREAMING_GUIDE.md  get_device_ip.py  partitions.csv  radar_commands.json  radar_profile.json  sdkconfig.defaults
components/firebase/: CMakeLists.txt  Kconfig.projbuild  firebase.c
components/firebase/include/: firebase.h
components/ws2812_led/: CMakeLists.txt  idf_component.yml  ws2812_led.c
fall_sense_x_mobile/: .firebaserc  .gitignore  README.md  firebase.json  firebase_rules.json  pubspec.yaml
fall_sense_x_mobile/assets/: radar_3d.html
fall_sense_x_mobile/functions/: index.js  package-lock.json  package.json
fall_sense_x_mobile/lib/: firebase_options.dart  main.dart
fall_sense_x_mobile/linux/: CMakeLists.txt
fall_sense_x_mobile/test/: widget_test.dart
fall_sense_x_mobile/web/: index.html  manifest.json
fall_sense_x_mobile/windows/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml
main/app/: button_handler.c  button_handler.h  device_pin.c  device_pin.h  fall_sense_x_main.c  ota_update.c  ota_update.h  radar_sensor.c  radar_sensor.h  web_server.c  web_server.h  wifi_stream.c  wifi_stream.h
tools/ota_flash_pc/: README.md  ota_flash_pc.py
tools/ota_upload/: package.json  upload_firmware.js
tools/pc_app/: config.json  run_visualizer.bat
tools/pc_app_code/: setup.py
tools/radar_terminal/: professional_radar_tool.py  radar_config_gui.py
tools/radar_uart_debug/: CMakeLists.txt  sdkconfig.defaults
(+50 files in other folders)
